data/diff_tests/wasmtime/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2568.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\99\80\80\80\00\01\03\65\6e"
    "\76\11\65\78\74\65\72\6e\61\6c\5f\66\75\6e\63\74"
    "\69\6f\6e\00\00\03\82\80\80\80\00\01\01\0a\94\80"
    "\80\80\00\01\8e\80\80\80\00\00\02\40\03\40\10\00"
    "\0e\01\00\01\0b\0b\0b"
  )
""
)